.tox/py26/log/py26-1.log
actionid: py26
msg: getenv
cmdargs: ['/home/u54887/PycharmProjects/ToxProject/.tox/py26/bin/pip', 'install', 'pytest']

DEPRECATION: Python 2.6 is no longer supported by the Python core team, please upgrade your Python. A future version of pip will drop support for Python 2.6
Collecting pytest
  Using cached pytest-3.2.5-py2.py3-none-any.whl
Collecting ordereddict; python_version == "2.6" (from pytest)
  Using cached ordereddict-1.1.tar.gz
Requirement already satisfied: setuptools in ./.tox/py26/lib/python2.6/site-packages (from pytest)
Collecting argparse; python_version == "2.6" (from pytest)
  Using cached argparse-1.4.0-py2.py3-none-any.whl
Collecting py>=1.4.33 (from pytest)
  Using cached py-1.4.34-py2.py3-none-any.whl
Building wheels for collected packages: ordereddict
  Running setup.py bdist_wheel for ordereddict: started
  Running setup.py bdist_wheel for ordereddict: finished with status 'error'
  Complete output from command /home/u54887/PycharmProjects/ToxProject/.tox/py26/bin/python2.6 -u -c "import setuptools, tokenize;__file__='/tmp/pip-build-ncBNUn/ordereddict/setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" bdist_wheel -d /tmp/tmpCzTwGZpip-wheel- --python-tag cp26:
  Traceback (most recent call last):
    File "<string>", line 1, in <module>
    File "/tmp/pip-build-ncBNUn/ordereddict/setup.py", line 8, in <module>
      py_modules=['ordereddict']
    File "/usr/lib64/python2.6/distutils/core.py", line 138, in setup
      ok = dist.parse_command_line()
    File "/home/u54887/PycharmProjects/ToxProject/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 439, in parse_command_line
      result = _Distribution.parse_command_line(self)
    File "/usr/lib64/python2.6/distutils/dist.py", line 460, in parse_command_line
      args = self._parse_command_opts(parser, args)
    File "/home/u54887/PycharmProjects/ToxProject/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 754, in _parse_command_opts
      nargs = _Distribution._parse_command_opts(self, parser, args)
    File "/usr/lib64/python2.6/distutils/dist.py", line 518, in _parse_command_opts
      cmd_class = self.get_command_class(command)
    File "/home/u54887/PycharmProjects/ToxProject/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 574, in get_command_class
      self.cmdclass[command] = cmdclass = ep.load()
    File "/home/u54887/PycharmProjects/ToxProject/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2422, in load
      return self.resolve()
    File "/home/u54887/PycharmProjects/ToxProject/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2428, in resolve
      module = __import__(self.module_name, fromlist=['__name__'], level=0)
    File "/home/u54887/PycharmProjects/ToxProject/.tox/py26/lib/python2.6/site-packages/wheel/bdist_wheel.py", line 407
      ignore=lambda x, y: {'PKG-INFO', 'requires.txt', 'SOURCES.txt',
                                     ^
  SyntaxError: invalid syntax
  
  ----------------------------------------
  Failed building wheel for ordereddict
  Running setup.py clean for ordereddict
Failed to build ordereddict
Installing collected packages: ordereddict, argparse, py, pytest
  Running setup.py install for ordereddict: started
    Running setup.py install for ordereddict: finished with status 'done'
Successfully installed argparse-1.4.0 ordereddict-1.1 py-1.4.34 pytest-3.2.5
